--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -5,12 +5,14 @@
 	--button-secondary-bg: var(--color-secondary);
 	--button-secondary-hover: var(--color-secondary-hover);
 	--button-secondary-text: var(--color-secondary-text);
-	--button-border-radius: var(--border-radius-md);
+	--button-border-radius-md: var(--border-radius-md);
+	--button-border-radius-sm: var(--border-radius-sm);
 	--button-disabled-bg: var(--color-disabled);
+
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
-	border-radius: var(--button-border-radius);
+	gap: var(--spacing-sm);
 	border: none;
 	outline: none;
 	gap: 0.5rem;
@@ -23,13 +25,15 @@
 
 /* Sizes */
 .size-small {
-	padding: 0.5rem 1rem;
+	padding: var(--spacing-sm) var(--spacing-md);
 	font-size: 14px;
+	border-radius: var(--button-border-radius-sm);
 }
 
 .size-medium {
-	padding: 0.5rem 1rem;
+	padding: var(--spacing-md) var(--spacing-lg);
 	font-size: 16px;
+	border-radius: var(--button-border-radius-md);
 }
 
 /* Variants */
@@ -37,9 +41,16 @@
 	border: none;
 }
 
-.variant-outlined {
+.variant-outlined.theme-secondary {
 	background: transparent;
-	border: 1px solid currentColor;
+	color: var(--button-secondary-text);
+	border: 1px solid var(--button-secondary-text);
+}
+
+.variant-outlined.theme-primary {
+	background: transparent;
+	color: var(--button-primary-bg);
+	border: 1px solid var(--button-primary-bg);
 }
 
 /* Themes */
@@ -52,39 +63,8 @@
 	background-color: var(--button-primary-hover);
 }
 
-.theme-primary.variant-outlined {
-	color: var(--button-primary-bg);
-	border-color: var(--button-primary-bg);
-}
-
-.theme-primary.variant-outlined:hover:not(:disabled) {
-	background-color: color-mix(
-		in srgb,
-		var(--button-primary-bg) 10%,
-		transparent
-	);
-}
-
-.theme-secondary {
-	background-color: var(--button-secondary-bg);
-	color: var(--button-secondary-text);
-}
-
 .theme-secondary:hover:not(:disabled) {
 	background-color: var(--button-secondary-hover);
-}
-
-.theme-secondary.variant-outlined {
-	color: var(--button-secondary-bg);
-	border-color: var(--button-secondary-bg);
-}
-
-.theme-secondary.variant-outlined:hover:not(:disabled) {
-	background-color: color-mix(
-		in srgb,
-		var(--button-secondary-bg) 10%,
-		transparent
-	);
 }
 
 /* Disabled state */
