--- a/src/components/slider/slider.module.css
+++ b/src/components/slider/slider.module.css
@@ -1,37 +1,32 @@
 .slider {
-	position: relative;
-	display: flex;
-	align-items: center;
-	width: 100%;
-	height: 24px;
-	touch-action: none;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 24px;
 }
 
 .track {
-	position: relative;
-	width: 100%;
-	height: 4px;
-	background-color: var(--color-secondary);
-	border-radius: 2px;
+  width: 100%;
+  height: 4px;
+  background-color: var(--color-secondary);
+  margin-left: 1rem
 }
 
 .fill {
-	position: absolute;
-	height: 100%;
-	background-color: var(--color-secondary);
-	border-radius: 2px;
+  height: 100%;
+  background-color: var(--color-secondary);
+  border-radius: 2px;
 }
 
 .thumb {
-	position: absolute;
-	width: 16px;
-	height: 16px;
-	background-color: var(--color-primary);
-	border-radius: 50%;
-	cursor: pointer;
-	transform: translateY(-50%);
+  width: 16px;
+  height: 16px;
+  margin-top: 2px;
+  background-color: var(--color-primary);
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 .thumb:hover {
-	box-shadow: 0 0 0 8px rgba(0, 0, 0, 0.1);
-}
+  box-shadow: 0 0 0 8px rgba(0, 0, 0, 0.1);
+} 
