--- a/src/components/slider/slider.module.css
+++ b/src/components/slider/slider.module.css
@@ -1,32 +1,32 @@
 .slider {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 24px;
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: 24px;
 }
 
 .track {
-  width: 100%;
-  height: 4px;
-  background-color: var(--color-secondary);
-  margin-left: 1rem
+	width: 100%;
+	height: 4px;
+	background-color: var(--color-secondary);
+	margin-left: 1rem;
 }
 
 .fill {
-  height: 100%;
-  background-color: var(--color-secondary);
-  border-radius: 2px;
+	height: 100%;
+	background-color: var(--color-secondary);
+	border-radius: 2px;
 }
 
 .thumb {
-  width: 16px;
-  height: 16px;
-  margin-top: 2px;
-  background-color: var(--color-primary);
-  border-radius: 50%;
-  cursor: pointer;
+	width: 16px;
+	height: 16px;
+	margin-top: 2px;
+	background-color: var(--color-primary);
+	border-radius: 50%;
+	cursor: pointer;
 }
 
 .thumb:hover {
-  box-shadow: 0 0 0 8px rgba(0, 0, 0, 0.1);
-} 
+	box-shadow: 0 0 0 8px rgba(0, 0, 0, 0.1);
+}
