--- a/test/App.module.css
+++ b/test/App.module.css
@@ -1,4 +1,5 @@
 .container {
+	padding-top: 4rem;
 	max-width: 15rem;
 	margin: 0 auto;
 	font-family: system-ui, sans-serif;
@@ -14,7 +15,9 @@
 		flex-direction: column;
 	}
 }
-
+.label {
+	padding-bottom: 0.25rem;
+}
 .sizeContainer {
 	display: grid;
 	align-items: end;
